Bug 154864 - Changing starting number of numbered list does nothing
Summary: Changing starting number of numbered list does nothing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.2.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2
Keywords: bibisected, bisected, regression
: 154236 157670 (view as bug list)
Depends on:
Blocks: Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2023-04-17 16:04 UTC by Gabriele Ponzo
Modified: 2024-01-10 07:05 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabriele Ponzo 2023-04-17 16:04:09 UTC
Steps to reproduce the bug:
1. Open Writer
2. Press F12 to insert an Ordered List
3. Write something, press ENTER and write something else on the 2nd point
4. Go to Bullets and Numbering settings (via Format menu or Format ToolBar)
5. On "Customise" tab increase the "Start at" value (as much as preferred)

Result:
Nothing happens, unless saving and then re-opening the file

Expected result:
Immediate update of the document layout



Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: it-IT (it_IT.UTF-8); UI: it-IT
Ubuntu package version: 4:7.5.2~rc2-0ubuntu0.20.04.1~lo1
Calc: threaded
Comment 1 Rafael Lima 2023-04-17 16:37:36 UTC
I'm unable to reproduce.

I'm getting immediate update of the list numbers.

Tested with

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.5.2~rc2-0ubuntu0.22.10.1~lo1
Calc: threaded
Comment 2 raal 2023-04-17 16:54:36 UTC
Confirm with Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 60bce1af8aab2115d603781193bb659b35d1aedb
CPU threads: 4; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 3 raal 2023-04-17 18:38:58 UTC
This seems to have begun at the below commit in bibisect repository/OS linux-64-7.5.
Adding Cc: to Noel Grandin; Could you possibly take a look at this one?
Thanks
 7d0730a30f43c4648de8ed59b1cbc196f1120970 is the first bad commit
commit 7d0730a30f43c4648de8ed59b1cbc196f1120970
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Oct 14 18:59:35 2022 +0200

    source cd3c16fbcb4f8e5e4c4448bc7cda96e8476d6aec

141373: tdf#129101 CTRL+A & Cut very slow | https://gerrit.libreoffice.org/c/core/+/141373
Comment 4 Gabriele Ponzo 2023-04-24 15:43:11 UTC
I've checked on a different distro and behaves the same:

Version: 7.5.2.2 (X86_64) / LibreOffice Community
Build ID: 50(Build:2)
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: kf5 (cairo+xcb)
Locale: it-IT (it_IT.UTF-8); UI: it-IT
7.5.2-1
Calc: threaded
Comment 5 Buovjaga 2023-10-20 05:38:23 UTC
*** Bug 157670 has been marked as a duplicate of this bug. ***
Comment 6 Buovjaga 2023-10-20 12:31:58 UTC Comment hidden (obsolete)
Comment 7 Buovjaga 2023-10-20 12:33:51 UTC Comment hidden (obsolete)
Comment 8 Gabriele Ponzo 2023-10-21 10:10:54 UTC
Attempted on this and still works:

Version: 7.4.1.2 / LibreOffice Community
Build ID: 40(Build:2)
CPU threads: 8; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: it-IT (it_IT.UTF-8); UI: it-IT
Ubuntu package version: 1:7.4.1~rc2-0ubuntu0.22.04.1~lo1
Calc: threaded
Comment 9 Noel Grandin 2023-11-27 15:03:21 UTC
I'm not seeing the reported bug on master, nor do I see it when building it at or before the reported commit.
The numbering only changes when the dialog is "applied", but it definitely changes for me.
Comment 10 Noel Grandin 2023-11-29 10:48:06 UTC
Ah, nevermind I can reproduct this on my WIndows build, seems much easier to trigger there
Comment 11 Commit Notification 2023-12-19 13:47:39 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/62afdd6f82c51cee330b278518622eaf1776e2c4

tdf#154864 Changing starting number of numbered list does nothing

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Noel Grandin 2023-12-19 13:49:37 UTC
*** Bug 154236 has been marked as a duplicate of this bug. ***
Comment 13 Commit Notification 2023-12-20 06:19:50 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d595b4436320fcd3ce0a84968d16d51f512a1e87

tdf#154864 Changing starting number of numbered list does nothing

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.