tdf#154864 Changing starting number of numbered list does nothing

regression from
    commit cd3c16fbcb4f8e5e4c4448bc7cda96e8476d6aec
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Fri Oct 14 15:14:13 2022 +0200
    tdf#129101 CTRL+A & Cut very slow
    avoid repeated invalidation of number tree, shaves 90% time off

The problem is that, after the above change, InvalidateListTree is not
called late enough to force invalidation of all necessary stuff.

So simply delay that until we do re-validation in SwNumRule::Validate.

Change-Id: I796cc34fe7d66d4876ee06286a8af7029a759eca
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160974
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>